Article toolbar: Use flexbox layout to prevent wrapping before tabs are collapsed

--- a/resources/skins.vector.styles/MenuTabs.less
+++ b/resources/skins.vector.styles/MenuTabs.less
@@ -1,5 +1,6 @@
 @import '../vector.variables.less';
 @import 'mediawiki.mixins.less';
+@import 'mediawiki.mixins.flex-align.less';
 
 /**
  * Styling for namespace tabs (page, discussion) and views (read, edit, view history, watch and other actions)
@@ -8,6 +9,13 @@
 .mw-article-toolbar {
 	// Clear the floats on .mw-article-toolbar--left, .mw-article-toolbar--right and siblings.
 	.mixin-clearfix();
+}
+
+.mw-article-toolbar,
+.mw-article-toolbar > div,
+.vector-menu-tabs > .vector-menu--list {
+	.flex-display();
+	.align-items( flex-start );
 }
 
 .vector-menu-tabs li {
@@ -30,6 +38,7 @@
 
 .mw-article-toolbar--right {
 	float: right;
+	margin-left: auto; // Right-justify with flexbox layout.
 }
 
 /* Namespaces and Views */
